# mini-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/codex-history/: agent-demo-full-visible-history.md
src/mini_agent_harness/: agent.py  config.py  main.py  model_client.py  session_recorder.py  tool.py  tools.py
tests/: test_agent_and_tools.py
