[project]
name = "mini-agent-harness"
version = "0.1.0"
description = "A tiny Python agent harness built step by step."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
minicode = "mini_agent_harness.main:minicode_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
